# qbcf

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bcf_utils.cpp  bcf_utils.h  entrypoint.sh  genotype_concordance.cpp  nuclear_pedigree.cpp  nuclear_pedigree.h  qbcf.cpp  qbcf.h  qbcf_cally.cpp  qbcf_test_qgenlib.cpp  sex_ploidy_map.cpp  sex_ploidy_map.h
